# fluent-bit-opamp

./: .gitignore  README.md  future_features.md  pyproject.toml  pyrightconfig.json
agent_broker/: .env.example  README.md  pyproject.toml  requirements.txt
agent_broker/docs/: README.md  ai_provider_connections.md  broker_code_structure.md  broker_code_structure_overview.mmd  broker_graph_state_transitions.md  broker_graph_state_transitions.mmd  broker_request_processing.mmd  broker_startup_and_shutdown.md  broker_startup_wiring.mmd  microsoft_teams_integration.md  slack_configuration.md
agent_broker/opamp_broker/: __init__.py  broker_app.py  broker_logging.json
agent_broker/opamp_broker/config/: broker.example.json  loader.py  planner_prompts.json  slack_app_manifest.yaml
agent_broker/opamp_broker/graph/: constants.py  graph.py  nodes.py  state.py
agent_broker/opamp_broker/mcp/: client.py  tools.py
agent_broker/opamp_broker/planner/: __init__.py  ai_connection.py  ai_connection_factory.py  ai_svc_planner.py  constants.py  engine.py  factory.py  openai_compatible_connection.py  rule_first_planner.py  template_ai_connection.py  types.py
agent_broker/opamp_broker/session/: manager.py  sweeper.py
agent_broker/opamp_broker/slack/: client.py  handlers.py
agent_broker/opamp_broker/social_collaboration/: __init__.py  base.py  factory.py
agent_broker/opamp_broker/social_collaboration/adapters/: __init__.py  slack.py
agent_broker/scripts/: configure_slack.cmd  configure_slack.ps1  configure_slack.sh  dev.cmd  dev.ps1  dev.sh  package.cmd  package.ps1  package.sh  start_broker.cmd  start_broker.ps1  start_broker.sh  stop_broker_service.cmd  stop_broker_service.ps1  stop_broker_service.sh
config/: opamp.json
consumer/: README.md  fluent-bit.yaml  fluentd.conf  opamp-fluentd.json  opamp.json  pyproject.toml  requirements.txt
consumer/src/opamp_consumer/: __init__.py  abstract_client.py  client.py  client_bootstrap.py  client_message_builder.py  client_mixins.py  client_transport.py  config.py  exceptions.py  fluentbit_client.py  fluentd_client.py  opamp_client_interface.py  reporting_flag.py  transport.py
consumer/src/opamp_consumer/custom_handlers/: __init__.py  chatops_command.py  handler_interface.py  interface.py  nullcommand.py  registry.py  shutdowncommand.py
consumer/src/opamp_consumer/full_update_controller/: __init__.py  always_send.py  sent_count.py  time_send.py  update_interface.py
consumer/src/opamp_consumer/proto/: __init__.py  anyvalue_pb2.py  ensure.py  opamp_pb2.py
consumer/tests/: conftest.py  fluentd.conf  opamp_fluentd.json  test_build_message.py  test_client.py  test_client_capabilities_and_flags.py  test_client_commands_and_custom_messages.py  test_client_description_and_metadata.py  test_client_main_bootstrap.py  test_client_transport_and_disconnect.py  test_client_transport_auth.py  test_client_update_controllers.py  test_config.py  test_custom_handlers.py  test_custom_handlers_chatops.py  test_custom_handlers_nullcommand.py  test_custom_handlers_registry.py  test_custom_handlers_shutdown.py  test_fluentd_client.py
docs/: README.md  adding_your_own_custom_action.md  api_gateway_requirements.md  authentication.md  command_process_implementation_note.md  consumer_client_diagram.md  consumer_client_diagrams.md  consumer_mixins.md  consumer_update_controllers.md  endpoints.md  features.md  implementation_guidelines.md  implementation_philosophy.md  index.md  opamp_tofu_design.md  provider_server_diagram.md  provider_server_diagrams.md  screenshots.md  scripts.md  self_signed_tls_setup.md  service_daemon_setup.md
mcp/: README.md  configure-claude-desktop-fastmcp.cmd  configure-claude-desktop-fastmcp.ps1  configure-claude-desktop-fastmcp.sh  configure-codex-fastmcp.cmd  configure-codex-fastmcp.ps1  configure-codex-fastmcp.sh  configure-mcp-clients-fastmcp.cmd  configure-mcp-clients-fastmcp.ps1  configure-mcp-clients-fastmcp.sh  mcp-server-definition.json
proto/: anyvalue.proto  opamp.proto
provider/: README.md  pyproject.toml  requirements.txt
provider/src/opamp_provider/: __init__.py  app.py  auth.py  chatop_command.py  command_interface.py  command_nullcommand.py  command_queue.py  command_record.py  command_restart_agent.py  command_shutdown_agent.py  commands.py  config.py  event_history.py  exceptions.py  help.html  opamp_protocol.py  provider_logging.json  server.py  state.py  state_persistence.py  tool_api_contract.py  transport.py  web_ui.html
provider/src/opamp_provider/command_implementations/: __init__.py  command_chatops.py  command_nullcommand.py  command_restart_agent.py  command_shutdown_agent.py
provider/src/opamp_provider/html/: help.html  web_ui.css  web_ui.html  web_ui_bindings.js  web_ui_functions.js  web_ui_state.js
provider/src/opamp_provider/mcptool/: __init__.py  routes.py  tool_openapi_spec.json
provider/src/opamp_provider/proto/: __init__.py  ensure.py  opamp_pb2.py
provider/tests/: conftest.py  test_commands.py  test_config.py  test_endpoints.py  test_error_responses.py  test_mcptool_quart_bridge.py  test_proto_ensure.py  test_provider_config.py  test_server.py  test_state.py  test_state_persistence.py  test_transport.py
scripts/: build_and_publish_wheels.py  build_artifacts.cmd  build_artifacts.sh  check_string_key_literals.py  configure_keycloak.cmd  configure_keycloak.ps1  configure_keycloak.sh  ensure_provider_tls_config.py  example.py  generate_self_signed_tls_cert.py  render_mermaid_png.sh  run_all_supervisors.cmd  run_all_supervisors.sh  run_consumer.cmd  run_consumer.sh  run_fluentbit_supervisor.cmd  run_fluentbit_supervisor.sh  run_fluentd_supervisor.cmd  run_fluentd_supervisor.sh  run_opamp_server.cmd  run_opamp_server.sh  run_provider.cmd  run_provider.sh  run_supervisor.cmd  run_supervisor.sh  run_supervisor_fluentd.cmd  run_supervisor_fluentd.sh  shutdown_opamp_server.cmd  shutdown_opamp_server.sh  start_fluentd.cmd  start_fluentd.sh  stop_supervisor.cmd  stop_supervisor.sh  terminate_fluent_bit.cmd  terminate_fluent_bit.sh
shared/: README.md  __init__.py  opamp_config.py  (+2 more)
(+10 files in other folders)
