[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "opamp"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Phil Wilkins", email = "phil-AT-@mp3monster.org" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0",
  "pylint>=3.3",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "G"]

[tool.ruff.lint.per-file-ignores]
"**/*_pb2.py" = ["F401"]
"**/*_pb2.pyi" = ["F401"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["shared", "provider/src/opamp_provider", "consumer/src/opamp_consumer"]

[tool.coverage.run]
source = ["shared", "provider/src/opamp_provider", "consumer/src/opamp_consumer"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pylint.main]
ignore-patterns = [
  ".*_pb2\\.py$",
  ".*_pb2\\.pyi$",
]
