[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "opamp-consumer"
version = "0.1.0"
description = "OpAMP consumer (client) skeleton using Quart transport semantics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "protobuf>=5.27",
  "grpcio-tools>=1.60",
  "httpx>=0.27",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
