# Copyright 2026 mp3monster.org
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "opamp-consumer"
version = "0.1.0"
description = "OpAMP client (as a supervisor) designed primarily for Fluent Bit & Fluentd  using Quart transport semantics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Phil Wilkins", email = "phil-AT-mp3monster.org" }]
dependencies = [
  "protobuf>=5.27",
  "grpcio-tools>=1.60",
  "httpx>=0.27",
  "websockets>=12.0",
  "uuid_v7>=0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
opamp-consumer = "opamp_consumer.fluentbit_client:main"
opamp-consumer-fluentd = "opamp_consumer.fluentd_client:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opamp_consumer"]
include = ["src/opamp_consumer/consumer_logging.json"]
