[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "opamp-provider"
version = "0.1.0"
description = "OpAMP provider (server) skeleton using Quart"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "quart>=0.19",
  "protobuf>=5.27",
  "grpcio-tools>=1.60",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
