# Copyright 2026 mp3monster.org
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "opamp-server"
version = "0.5.0"
description = "OpAMP Server - upstream source https://github.com/mp3monster/fluent-opamp "
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Phil Wilkins", email = "phil-AT-mp3monster.org" }]
dependencies = [
  "quart>=0.19",
  "pydantic>=2.6",
  "protobuf>=5.27",
  "grpcio-tools>=1.60",
  "fastmcp>=2.0",
  "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
opamp-provider = "opamp_provider.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opamp_provider", "src/shared"]
include = ["src/opamp_provider/provider_logging.json"]

[tool.hatch.build.targets.wheel.force-include]
"../docs" = "docs"
"../scripts" = "scripts"
"../mcp" = "mcp"
